# adaptive-iteration

./: .gitignore  README.md  pyproject.toml
adaptive_iteration/: __init__.py
adaptive_iteration/adapters/: __init__.py  base.py  short_video.py
adaptive_iteration/core/: analyzer.py  config.py  experiment.py  hypothesis.py
core/: __init__.py  analyzer.py  config.py  hypothesis.py  ledger.py
