[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-iteration"
version = "0.1.0"
description = "Domain-agnostic adaptive experimentation framework: experiment → measure → learn → challenge."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/imaknas/adaptive-iteration"
Repository = "https://github.com/imaknas/adaptive-iteration"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
